// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.Text Component Typography.Text ellipsis with no text 1`] = `
<div>
  <span
    class="typography ellipsis"
  >
    <div />
  </span>
</div>
`;

exports[`Typography.Text Component Typography.Text handles click 1`] = `
<div>
  <span
    class="typography link"
    data-testid="DATA-TEST-ID"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component Typography.Text renders with all types 1`] = `
<div>
  <span
    class="typography error disabled helper highlighted label placeholder tiny"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component Typography.Text renders with all types 2`] = `
<div>
  <span
    class="typography"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component Typography.Text renders with all types 3`] = `
<div>
  <span
    class="typography disabled"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component Typography.Text renders with all types 4`] = `
<div>
  <span
    class="typography error"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component Typography.Text renders with all types 5`] = `
<div>
  <span
    class="typography helper"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component Typography.Text renders with all types 6`] = `
<div>
  <span
    class="typography highlighted"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component Typography.Text renders with all types 7`] = `
<div>
  <span
    class="typography label"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component Typography.Text renders with all types 8`] = `
<div>
  <span
    class="typography placeholder"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component Typography.Text renders with all types 9`] = `
<div>
  <span
    class="typography tiny"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component Typography.Text renders with no types 1`] = `
<div>
  <span
    class="typography CLASSNAME ellipsis"
    style="height: 200px;"
    title="TEXT"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Title Component Typography.Title ellipsis with no text 1`] = `
<div>
  <h3
    class="typography ellipsis h3"
  >
    <div />
  </h3>
</div>
`;

exports[`Typography.Title Component Typography.Title handles click 1`] = `
<div>
  <h1
    class="typography h1"
    data-testid="DATA-TEST-ID"
  >
    TITLE
  </h1>
</div>
`;

exports[`Typography.Title Component Typography.Title renders 1`] = `
<div>
  <h2
    class="typography ellipsis h2 CLASSNAME"
    style="height: 200px;"
    title="TITLE"
  >
    TITLE
  </h2>
</div>
`;
